[gd_scene load_steps=24 format=3 uid="uid://cnqyjk87iobqe"]

[ext_resource type="Script" uid="uid://s6ylg6vjm5ue" path="res://Scripts/main_ui.gd" id="1_bo1nx"]
[ext_resource type="Theme" uid="uid://colchl8clxybo" path="res://Misc/Themes/gruvvy.tres" id="1_kry3j"]
[ext_resource type="Script" uid="uid://c1asys4gpvmsu" path="res://Scripts/pastebin_internet.gd" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://d0qqcskgybm1c" path="res://Scripts/BG.gd" id="2_hptm8"]
[ext_resource type="Script" uid="uid://x4w6gg7vm581" path="res://Scripts/top_row.gd" id="3_8gbba"]
[ext_resource type="Theme" uid="uid://oblqo1xv4ihw" path="res://Misc/Themes/cobalt.tres" id="4_3pmx8"]
[ext_resource type="Script" uid="uid://b2dbnx4heao4y" path="res://Scripts/panel.gd" id="4_jjvhh"]
[ext_resource type="Texture2D" uid="uid://bmsmu084a5xci" path="res://Misc/Icons/dropdown.svg" id="5_3pmx8"]
[ext_resource type="Texture2D" uid="uid://wio2yhgfjdte" path="res://Misc/Icons/folder.svg" id="5_21xkr"]
[ext_resource type="Script" uid="uid://ci5o0w5yg5c4s" path="res://Scripts/middle_row.gd" id="5_ynf5e"]
[ext_resource type="Texture2D" uid="uid://wglcbfutvr0n" path="res://Misc/Icons/info.svg" id="6_344ge"]
[ext_resource type="Texture2D" uid="uid://ddpr7gd4mty23" path="res://Misc/Icons/checkbox.svg" id="6_u50mg"]
[ext_resource type="Texture2D" uid="uid://dsagpaqurv6e2" path="res://Misc/Icons/checkbox_uncheck.svg" id="7_cbgmd"]
[ext_resource type="Texture2D" uid="uid://ci8xu6tae8sid" path="res://Misc/Icons/palette.svg" id="7_ynf5e"]
[ext_resource type="Texture2D" uid="uid://b3vor4gd7to7b" path="res://Misc/Icons/radio_check.svg" id="8_1w6v2"]
[ext_resource type="Texture2D" uid="uid://bu2b3wv3tnri4" path="res://Misc/Icons/radio_uncheck.svg" id="9_ueoa1"]
[ext_resource type="Texture2D" uid="uid://c78mg173uqr5" path="res://Misc/Icons/down.svg" id="10_6vcvc"]
[ext_resource type="Texture2D" uid="uid://d2rud5leilwkd" path="res://Misc/Icons/up.svg" id="11_7k868"]
[ext_resource type="Texture2D" uid="uid://bua8fpeyf4xjn" path="res://Misc/Icons/swap.svg" id="12_3pmx8"]
[ext_resource type="Script" uid="uid://c8b1ng858y34s" path="res://Scripts/theme_generator.gd" id="12_6iyac"]
[ext_resource type="FontFile" uid="uid://jcl3sqxkhfwh" path="res://Misc/Fonts/VictorMono-Bold.ttf" id="13_fdnlq"]
[ext_resource type="Theme" uid="uid://beukarelgly6a" path="res://Misc/Themes/theme_baseplate.tres" id="13_jkdf5"]
[ext_resource type="Theme" uid="uid://b5xb5nuh4htn1" path="res://Misc/Themes/catppuccin.tres" id="22_ee4r6"]

[node name="BG" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BGPanel"
script = ExtResource("2_hptm8")
themes = Array[Theme]([ExtResource("1_kry3j"), ExtResource("4_3pmx8"), ExtResource("22_ee4r6")])

[node name="Main UI" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Backend" type="Node" parent="Main UI"]
unique_name_in_owner = true
script = ExtResource("2_bo1nx")
paste_name_length = 3

[node name="HTTPRequest" type="HTTPRequest" parent="Main UI/Backend"]

[node name="Main Sorter" type="VBoxContainer" parent="Main UI" node_paths=PackedStringArray("content_entry", "name_entry")]
layout_mode = 2
script = ExtResource("1_bo1nx")
content_entry = NodePath("Paste Content Entry")
name_entry = NodePath("Top Row/Custom Name")

[node name="Top Row" type="HBoxContainer" parent="Main UI/Main Sorter" node_paths=PackedStringArray("custom_name_bar", "name_presets_bar", "name_length_bar")]
layout_mode = 2
script = ExtResource("3_8gbba")
custom_name_bar = NodePath("Custom Name")
name_presets_bar = NodePath("Name Presets")
name_length_bar = NodePath("Name Length")

[node name="Custom Name" type="LineEdit" parent="Main UI/Main Sorter/Top Row"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Link Name"
max_length = 30

[node name="Name Presets" type="OptionButton" parent="Main UI/Main Sorter/Top Row"]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "Decimals"
popup/item_0/id = 0
popup/item_1/text = "Hexadecimals"
popup/item_1/id = 1
popup/item_2/text = "Base64"
popup/item_2/id = 2
popup/item_3/text = "Alphabets"
popup/item_3/id = 4
popup/item_4/text = "Words"
popup/item_4/id = 3

[node name="Name Length" type="SpinBox" parent="Main UI/Main Sorter/Top Row"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.27
theme_type_variation = &"RightAnchoredLineEdit"
min_value = 3.0
max_value = 10.0
value = 3.0
suffix = "chr"

[node name="Middle Row" type="HBoxContainer" parent="Main UI/Main Sorter"]
layout_mode = 2
script = ExtResource("5_ynf5e")

[node name="About" type="Button" parent="Main UI/Main Sorter/Middle Row"]
layout_mode = 2
text = "about"
icon = ExtResource("6_344ge")

[node name="Theme Toggle" type="Button" parent="Main UI/Main Sorter/Middle Row"]
layout_mode = 2
text = "theme"
icon = ExtResource("7_ynf5e")

[node name="URL Toggle" type="Button" parent="Main UI/Main Sorter/Middle Row"]
layout_mode = 2
toggle_mode = true
text = "Mode Toggle"
icon = ExtResource("12_3pmx8")

[node name="Link Shorten Status" type="Label" parent="Main UI/Main Sorter/Middle Row"]
layout_mode = 2
text = "Pasting text"

[node name="Paste Content Entry" type="TextEdit" parent="Main UI/Main Sorter"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Paste Content"

[node name="Submit Button" type="Button" parent="Main UI/Main Sorter"]
layout_mode = 2
text = "Submit"

[node name="Panels Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"PanelMargins"

[node name="Panel" type="Panel" parent="Panels Margin" node_paths=PackedStringArray("content_node")]
visible = false
layout_mode = 2
script = ExtResource("4_jjvhh")
content_node = NodePath("MarginContainer/Sorter/Content")
offline_error = "No response from server. Is it offline?"
success_notice = "Pastebin has been successfully pasted!

Go to [url]https://{link}[/url]"
no_content_error = "You cannot start a pastebin with no content."
no_filename_error = "You haven't specified a paste name. This is most likely a bug."
filename_short_error = "Paste name  was too short. It must be at least 3 characters."
content_too_big = "Your content was too big. Keep it below 1 million characters."
unknown_error = "We ran into an unknown error."
footer = "Filename : \"{filename}\"
Error : \"{error}\"
Status: \"{status}\"
Code: \"{code}\""

[node name="MarginContainer" type="MarginContainer" parent="Panels Margin/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sorter" type="VBoxContainer" parent="Panels Margin/Panel/MarginContainer"]
layout_mode = 2

[node name="Content" type="RichTextLabel" parent="Panels Margin/Panel/MarginContainer/Sorter"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "No response from server. Is it offline?

Filename : \"{filename}\"
Error : \"{error}\"
Status: \"{status}\"
Code: \"{code}\"
"

[node name="Close" type="Button" parent="Panels Margin/Panel/MarginContainer/Sorter"]
layout_mode = 2
text = "Close."

[node name="About Page" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"PanelMargins"

[node name="Panel" type="Panel" parent="About Page"]
layout_mode = 2
script = ExtResource("4_jjvhh")

[node name="MarginContainer" type="MarginContainer" parent="About Page/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sorter" type="VBoxContainer" parent="About Page/Panel/MarginContainer"]
layout_mode = 2

[node name="Content" type="RichTextLabel" parent="About Page/Panel/MarginContainer/Sorter"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center] HastePasteGaste [/center]
[center]~~~[/center]
A cheap, self-hostable pastebin cum link-shortener client made in Godot.

[right]WinnerWind 2025.
[url]https://winnerwind.in[/url]    \"Change the world or die trying\""

[node name="Close" type="Button" parent="About Page/Panel/MarginContainer/Sorter"]
layout_mode = 2
text = "Close."

[node name="Theme Generator" type="Node" parent="."]
script = ExtResource("12_6iyac")
theme_baseplate = ExtResource("13_jkdf5")
accent_color = Color(0.4, 0.4, 0.4, 1)
accent_color_focused = Color(0.6, 0.6, 0.6, 1)
fg_color = Color(0.16, 0.16, 0.16, 1)
fg_focus_color = Color(0.19, 0.19, 0.19, 1)
popup_panel_border_color = Color(1, 1, 1, 1)
popup_menu_color = Color(0.19, 0.19, 0.19, 1)
font_color = Color(1, 1, 1, 1)
font_color_hover = Color(0.753984, 0.753984, 0.753984, 1)
font_color_placeholder = Color(0.450648, 0.450648, 0.450648, 1)
icon_color_spinbox = Color(1, 1, 1, 1)
icon_color_disabled = Color(0, 0, 0, 0.580392)
main_font = ExtResource("13_fdnlq")
checkbox_toggled = ExtResource("6_u50mg")
checkbox_untoggled = ExtResource("7_cbgmd")
down_icon = ExtResource("10_6vcvc")
up_icon = ExtResource("11_7k868")
dropdown_icon = ExtResource("5_3pmx8")
folder_icon = ExtResource("5_21xkr")
info_icon = ExtResource("6_344ge")
palette_icon = ExtResource("7_ynf5e")
radio_toggled = ExtResource("8_1w6v2")
radio_untoggled = ExtResource("9_ueoa1")

[connection signal="send_prompt" from="Main UI/Backend" to="Panels Margin/Panel" method="set_main_content"]
[connection signal="request_completed" from="Main UI/Backend/HTTPRequest" to="Main UI/Backend" method="_on_request_completed"]
[connection signal="text_changed" from="Main UI/Main Sorter/Top Row/Custom Name" to="Main UI/Main Sorter/Top Row" method="_on_custom_name_text_changed"]
[connection signal="item_selected" from="Main UI/Main Sorter/Top Row/Name Presets" to="Main UI/Main Sorter/Top Row" method="_on_name_presets_item_selected"]
[connection signal="value_changed" from="Main UI/Main Sorter/Top Row/Name Length" to="Main UI/Main Sorter/Top Row" method="_on_name_length_value_changed"]
[connection signal="pressed" from="Main UI/Main Sorter/Middle Row/About" to="About Page/Panel" method="show"]
[connection signal="pressed" from="Main UI/Main Sorter/Middle Row/Theme Toggle" to="Main UI/Main Sorter/Middle Row" method="_on_theme_toggle_pressed"]
[connection signal="toggled" from="Main UI/Main Sorter/Middle Row/URL Toggle" to="Main UI/Backend" method="_set_link_shortener_mode"]
[connection signal="toggled" from="Main UI/Main Sorter/Middle Row/URL Toggle" to="Main UI/Main Sorter/Middle Row" method="change_link_toggle_status"]
[connection signal="pressed" from="Main UI/Main Sorter/Submit Button" to="Main UI/Main Sorter" method="_submit_pressed"]
[connection signal="meta_clicked" from="Panels Margin/Panel/MarginContainer/Sorter/Content" to="Panels Margin/Panel" method="_on_content_meta_clicked"]
[connection signal="pressed" from="Panels Margin/Panel/MarginContainer/Sorter/Close" to="Panels Margin/Panel" method="hide"]
[connection signal="meta_clicked" from="About Page/Panel/MarginContainer/Sorter/Content" to="About Page/Panel" method="_on_content_meta_clicked"]
[connection signal="pressed" from="About Page/Panel/MarginContainer/Sorter/Close" to="About Page/Panel" method="hide"]
